# follow-up-boss

./: .gitignore  CHANGELOG.md  DEALS_COMMISSION_GUIDE.md  MANIFEST.in  README.md  TEXT_MESSAGES_IMPROVEMENTS.md  appointment_test_log.txt  coverage.xml  pyproject.toml  requirements-dev.txt  test_results.txt
.cursor/: environment.json
follow_up_boss/: __init__.py  action_plans.py  appointment_outcomes.py  appointment_types.py  appointments.py  calls.py  client.py  custom_fields.py  deal_attachments.py  deal_custom_fields.py  deals.py  email_marketing.py  email_templates.py  enhanced_client.py  enhanced_people.py  events.py  groups.py  identity.py  inbox_apps.py  mcp_server.py  notes.py  pagination.py  people.py  people_relationships.py  person_attachments.py  pipelines.py  ponds.py  reactions.py  smart_lists.py  stages.py  tasks.py  team_inboxes.py  teams.py  text_message_templates.py  text_messages.py  threaded_replies.py  timeframes.py  users.py  webhook_events.py  webhook_utils.py  (+1 more)
follow_up_boss_api/: __init__.py  action_plans.py  api_client.py  appointment_outcomes.py  appointment_types.py  appointments.py  calls.py  client.py  custom_fields.py  deal_attachments.py  deal_custom_fields.py  deals.py  email_marketing.py  email_templates.py  events.py  groups.py  identity.py  inbox_apps.py  notes.py  people.py  people_relationships.py  person_attachments.py  pipelines.py  ponds.py  reactions.py  smart_lists.py  stages.py  tasks.py  team_inboxes.py  teams.py  text_message_templates.py  text_messages.py  threaded_replies.py  timeframes.py  webhook_events.py  webhooks.py
tasks/: endpoint_tasks.md
tests/: conftest.py  test_action_plans.py  test_action_plans_enhancements.py  test_appointment_outcomes.py  test_appointment_types.py  test_appointments.py  test_calls.py  test_client_exceptions.py  test_client_utils.py  test_corrected_apis.py  test_critical_issues.py  test_custom_fields.py  test_custom_headers.py  test_deal_attachments.py  test_deal_custom_fields.py  test_deals.py  test_email_marketing.py  test_email_templates.py  test_endpoints.py  test_enhanced_client.py  test_enhanced_people.py  test_events.py  test_fub_api_direct.py  test_groups.py  test_identity.py  test_inbox_apps.py  test_method_signatures.py  test_notes.py  test_pagination.py  test_people.py  test_people_enhancements.py  test_people_list_by_list_id.py  test_people_listid.py  test_people_nextlink.py  test_people_relationships.py  test_people_shapes.py  test_people_tags.py  test_people_unclaimed.py  test_person_attachments.py  test_pipelines.py  (+17 more)
