[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "follow-up-boss"
version = "0.2.2"
description = "A Python client library for the Follow Up Boss API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "The Perry Group", email = "contact@theperry.group"},
]
keywords = ["followupboss", "api", "client", "real-estate", "crm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.991",
    "flake8>=5.0.0",
    "pylint>=2.15.0",
    "types-requests>=2.28.0",
]
mcp = [
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
    "uvloop>=0.19.0",
]

[project.scripts]
follow-up-boss-mcp = "follow_up_boss.mcp_server:main"

[project.urls]
Homepage = "https://github.com/theperrygroup/follow-up-boss"
Repository = "https://github.com/theperrygroup/follow-up-boss"
Documentation = "https://github.com/theperrygroup/follow-up-boss#readme"
"Bug Tracker" = "https://github.com/theperrygroup/follow-up-boss/issues"

[tool.setuptools.packages.find]
include = ["follow_up_boss*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=follow_up_boss",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
] 